--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ notebook
 numpy
 matplotlib
 seaborn
-python-box==6.0.2
+python-box
 pyYAML
 tqdm
 ensure==1.0.2
@@ -16,4 +16,5 @@ types-PyYAML
 scipy
 Flask
 Flask-Cors
+
 -e .
