--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ tensorflow==2.12.0
 pandas 
 gdown
 dvc
-mlflow==2.2.2
+mlflow==2.12.1
+
 notebook
 numpy
 matplotlib
@@ -16,5 +17,9 @@ types-PyYAML
 scipy
 Flask
 Flask-Cors
+dagshub
+setuptools==65.5.1
+# mlflow==2.12.1
+
 
 -e .
